src/main/webapp/compass-hidden/_common.scss
@import "compass";
@import "compass/css3";
@import "twitterBootstrap/bootstrap";

#main {
  max-width: 1000px;
  margin: auto;
}

ul {
  list-style: none;
  margin: 0;
  padding: 0;
}

%create-form {
  margin-top: 30px;

  @extend %create-element;

  button {
    @extend .btn;
  }
}

%create-element {
  li {
    display: inline-block;
    margin: 0 20px 10px 0;
    
    label {
      display: block;
    }

    input {
      @include border-radius(5px);
      height: 30px;
      padding: 5px 10px;
      border: 1px solid #c0c0c0;
      width: 300px;
    }

    textarea {
      @include border-radius(5px);
      height: 70px;
      padding: 5px 10px;
      border: 1px solid #c0c0c0;
      width: 460px;
    }
  }
}

%list-element {
  margin-top: 45px;
  
  button {
    @extend .btn;
    @extend .btn-danger;
    font-size: 13px;
  }

  table {
    @extend .table;
    @extend .table-bordered;

    tbody .summary:hover {
      background-color: whitesmoke;
    }

    .summary:hover {
      cursor: pointer;
    }

    td {
      vertical-align: middle !important;
    }

    .hidden-row {
      padding: 0;
    }
  }

  margin-bottom: 100px;
}

